--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.0",
     "@types/node": "^16.11.0",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
@@ -26,11 +28,11 @@
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
     "@types/connect-redis": "^0.0.17",
-    "@types/express-session": "^1.17.4",
     "@types/redis": "^2.8.32",
     "apollo-server-express": "^3.4.0",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
